# R-Type

./: .gitignore  CMakeLists.txt  conanfile.txt  readme.md
Client/: CMakeLists.txt  main.cpp
Client/Include/: Client.hpp  ClientNetworking.hpp  Mediator.hpp  Traductions.hpp
Client/Include/Components/: AssetLoader.hpp  AudioComp.hpp  BackgroundComponent.hpp  ExplosionFxComp.hpp  LobbyComp.hpp  MonsterComp.hpp  MonsterManager.hpp  ProjectileComp.hpp  TransformComp.hpp
Client/Include/Components/GUI/: AnimatedComp.hpp  BackgroundComponent.hpp  ChatComp.hpp  InputTextComp.hpp  ListSelectorComp.hpp  SpriteComp.hpp  SubPanelComp.hpp  TextButton.hpp  TextComp.hpp
Client/Include/Components/Player/: PlayerComp.hpp  PlayerForceBar.hpp  PlayerHUDComp.hpp  PlayerMovementComp.hpp  PlayerShootComp.hpp
Client/Include/Scenes/: ConnectScene.hpp  GameOverScene.hpp  GameScene.hpp  LaunchScene.hpp  LobbyScene.hpp  MenuScene.hpp  OptionsScene.hpp  ScoresScene.hpp
Client/Source/: Client.cpp  ClientNetworking.cpp  LobbyComp.cpp  Mediator.cpp  Traductions.cpp
Client/Source/Components/: AssetLoader.cpp  AudioComp.cpp  ExplosionFxComp.cpp  MonsterComp.cpp  MonsterManager.cpp  ProjectileComp.cpp  SpriteComp.cpp  TransformComp.cpp
Client/Source/Components/GUI/: AnimatedComp.cpp  BackgroundComponent.cpp  ChatComp.cpp  InputTextComp.cpp  ListSelectorComp.cpp  SubPanelComp.cpp  TextButton.cpp  TextComp.cpp
Client/Source/Components/Player/: PlayerComp.cpp  PlayerForceBar.cpp  PlayerHUDComp.cpp  PlayerMovementComp.cpp  PlayerShootComp.cpp
Client/Source/Scenes/: ConnectScene.cpp  GameOverScene.cpp  GameScene.cpp  LaunchScene.cpp  LobbyScene.cpp  MenuScene.cpp  OptionsScene.cpp  ScoresScene.cpp
Monsters/: CMakeLists.txt
Monsters/Include/: First.hpp
Monsters/Source/: First.cpp
Server/: CMakeLists.txt  main.cpp
Server/Include/: CollisionHandler.cpp  CollisionHandler.hpp  NetSession.hpp  Server.hpp  ServerNetworking.hpp
Server/Source/: Server.cpp  ServerNetworking.cpp
Shared/: BinaryPacket.cpp  BinaryPacket.h  GameState.h  IMonsterModule.hpp  MonsterHandler.cpp  MonsterHandler.hpp  RType.h  StringCleaner.h  StringSplitter.hpp
Shared/ECS/: Component.hpp  Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp  Scene.hpp
documentations/: rfc_protocol.txt
